# javdb115

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  contracts.py  database.py  dependencies.py  errors.py  javdb_models.py  main.py  media_urls.py  scheduler.py  schema.sql  security.py
backend/app/adapters/: cloud115.py  cloud115_types.py  cloud115_utils.py  javdb_api.py  telegram.py
backend/app/api/: auth.py  checks.py  follows.py  health.py  image_proxy.py  javdb_proxy.py  settings.py  tasks.py
backend/app/repositories/: actors.py  catalog.py  follows.py  logs.py  sessions.py  settings.py  task_events.py  tasks.py
backend/app/services/: actor_movie_scan.py  auth.py  cloud.py  completed_directory.py  download_monitor.py  emby_metadata.py  follow_workflow.py  follows.py  integration_status.py  javdb_movie_bundle.py  javdb_movie_payload.py  magnet_filter.py  manual_offline.py  notifier.py  organizer.py  p115_login.py  settings.py  task_retry.py  task_state.py  telegram_commands.py  telegram_movie_jobs.py  (+1 more)
backend/tests/: test_background_recovery.py  test_cloud115.py  test_completed_directory.py  test_dashboard.py  test_discovery_features.py  test_download_monitor.py  test_download_monitor_directories.py  test_emby_metadata.py  test_follows_service.py  test_image_proxy.py  test_javdb_movie_bundle.py  test_magnet_filter.py  test_offline_workflows.py  test_organizer_safety.py  test_p115_login.py  test_scheduler.py  test_settings_service.py  test_telegram_movies.py
(+38 files in other folders)
