[project]
name = "javdb115-backend"
version = "0.1.0"
description = "Mobile-first JAVDB to 115 automation backend"
requires-python = ">=3.12,<4.0"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "croniter>=2.0.7",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "p115client>=0.0.9.0.2,<0.0.10",
  "pillow>=11.0.0",
  "pydantic>=2.9.2",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "types-croniter>=6.0.0.20251126",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
